directory and filename cleanup

--- a/configs/etc/rsyslog.d/60-graylog.conf
+++ b/configs/etc/rsyslog.d/60-graylog.conf
@@ -1,2 +1,2 @@
-# *.*@cabin.hq.802ski.com:5140;RSYSLOG_SyslogProtocol23Format
+# *send syslog messages to graylog server
 action(type="omfwd" Target="10.7.10.9" Port="5140" Protocol="udp" Template="RSYSLOG_SyslogProtocol23Format")
